fixed logo cutting off on home page

--- a/styles/home.css
+++ b/styles/home.css
@@ -4,7 +4,7 @@ body{
     background-position: center;
     background-color: #211820;
 
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
